Updated names for easier readability. Fixed a minor css issue on project landing page.

--- a/index.css
+++ b/index.css
@@ -1,6 +1,4 @@
 
-
-
 * {
     opacity: .9;
 }
@@ -8,8 +6,7 @@
 body {
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
-    height: 97vh;
-    width
+    height: 97vh;    
     background: #43C6AC;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to bottom, #191654, #43C6AC);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to top, #191654, #43C6AC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
